[package]
edition = "2021"
name = "rp2040-badger-snake"
version = "0.1.0"

[lib]
name = "badger_snake"
path = "src/lib.rs"

[[bin]]
name = "badger_2040"
path = "src/bin/badger_2040.rs"
required-features = ["rp2040-hal"]

[features]
graphics-simulator = ["embedded-graphics-simulator"]
rp2040-hal = [
  "cortex-m",
  "cortex-m-rt",
  "embedded-hal",
  "embedded-alloc",
  "pimoroni_badger2040",
  "uc8151",
  "fugit",
  "nb",
  "defmt",
  "defmt-rtt",
  "panic-probe",
  "rp-pico",
]
default = []

[[bin]]
name = "simulator"
path = "src/bin/simulator.rs"
required-features = ["graphics-simulator"]

[dependencies]
embedded-graphics = "0.8.0"
embedded-text = "0.6.0"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }

# graphics-simulator dependencies
embedded-graphics-simulator = { version = "0.5.0", optional = true }

# rp2040-hal dependencies
cortex-m = { version = "0.7", optional = true }
cortex-m-rt = { version = "0.7", optional = true }
embedded-hal = { version = "0.2.5", features = ["unproven"], optional = true }
embedded-alloc = { version = "0.5.0", optional = true }
pimoroni_badger2040 = { version = "0.4.0", optional = true }
uc8151 = { version = "0.2.0", optional = true }
fugit = { version = "0.3.6", optional = true }
nb = { version = "1.0.0", optional = true }
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
rp-pico = { version = "0.7", optional = true }

# We're using a Pico by default on this template


# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.6"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.8", features=["rt", "critical-section-impl"] }
# rp2040-boot2 = "0.2"

# [dev-dependencies]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# # cargo test
# [profile.test]
# codegen-units = 1
# debug = 2
# debug-assertions = true
# incremental = false
# opt-level = 3
# overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
